Remove reports warning sign and data map overflow fixed

--- a/src/app/data-map/data-map.component.css
+++ b/src/app/data-map/data-map.component.css
@@ -17,6 +17,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  overflow-y: scroll;
 }
 
 .button {
